--- a/camera.html
+++ b/camera.html
@@ -6,7 +6,7 @@
 
 		<!-- <a-marker type="pattern" preset="custom" url="...." (...)
 -->
-		<img src="https://leoncollins.github.io/qr-code">
+		<img src="https://leoncollins.github.io/qr-code.png">
 
 
 		<a-marker-camera preset='hiro'></a-marker-camera>
