--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 	<body>
 		<h1>Hello World</h1>
 		<a href="https://leoncollins.github.io/camera">Camera</a>
+		<img src="https://leoncollins.github.io/qr-code.png" alt="A Picture">
 	</body>
 </html>
