--- a/camera.html
+++ b/camera.html
@@ -2,11 +2,13 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		
-		<!-- <a-marker type="pattern" preset="custom" url="...." (...) -->
+		
+		<a-marker type="pattern" preset="custom" url="/qr-code.png">
+			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+		</a-marker>
 
 
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-entity camera></a-entity>
 	</a-scene>
 </body>
