--- a/camera.html
+++ b/camera.html
@@ -4,7 +4,7 @@
 	<a-scene embedded arjs='sourceType: webcam;'>
 		
 
-		<a-marker type="pattern" preset="custom" url="{{ site.url }}/qr-code.png">
+		<a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">
 			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		</a-marker>
 
