--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 		<h1>Hello World</h1>
 		<a href="https://leoncollins.github.io/camera">Camera</a>
 		<img src="/qr-code.png" alt="A Picture" style="width:400px;height:400px;">
+		<img src="https://imgur.com/gallery/nnDuB" alt="A Picture" style="width:400px;height:400px;">
 	</body>
 </html>
