--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<a href="https://leoncollins.github.io/camera">Camera</a>
 		<img src="/qr-code.png" alt="A Picture" style="width:400px;height:400px;">
 		<img src="https://imgur.com/gallery/nnDuB" alt="A Picture" style="width:400px;height:400px;">
-		
+		<img src="https://leoncollins.github.io/qr-code.png" alt="Another Picture" style="width:400px;height:400px;">
 	</body>
 </html>
