--- a/camera.html
+++ b/camera.html
@@ -3,8 +3,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		
-
-		<a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">
+<!--<a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">-->
+		<a-marker type="barcode" value="1">
 			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		</a-marker>
 
