--- a/camera.html
+++ b/camera.html
@@ -8,6 +8,17 @@
 			<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		</a-marker>
 
+		<a-marker type="barcode" value="2">
+			<a-box position='0 0.5 0' height='5' width='5' material='color: red;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="3">
+			<a-box position='0 5 0' height='1' width='1' material='color: green;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="4">
+			<a-box position='0 0.5 0' height='10' width='10' material='color: blue;'></a-box>
+		</a-marker>
 
 		<a-entity camera></a-entity>
 	</a-scene>
