--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<a href="https://leoncollins.github.io/camera">Camera</a>
 		<img src="https://leoncollins.github.io/qr-code.png" alt="A Picture" style="width:500px;height:500px;">
 
-		<img src="https://leoncollins.github.io/02.png" alt="A Picture" style="width:500px;height:500px;">
+		<!--<img src="https://leoncollins.github.io/02.png" alt="A Picture" style="width:500px;height:500px;">
 
 		<img src="https://leoncollins.github.io/03.png" alt="A Picture" style="width:500px;height:500px;">
 
-		<img src="https://leoncollins.github.io/04.png" alt="A Picture" style="width:500px;height:500px;">
+		<img src="https://leoncollins.github.io/04.png" alt="A Picture" style="width:500px;height:500px;">-->
 	</body>
 </html>
