--- a/camera.html
+++ b/camera.html
@@ -41,21 +41,21 @@
 
 
 
-		<a-marker updateHeight type="barcode" value="2">
-			<a-box position='0 0.5 0' height='5' width='5' material='color: red;'></a-box>
+		<a-marker type="barcode" value="2">
+			<a-box updateHeight position='0 3 0' height='2' width='2' material='color: red;'></a-box>
 		</a-marker>
 
 		
 
-		<a-marker updateHeight type="barcode" value="3">
-			<a-box position='0 5 0' height='1' width='1' material='color: green;'></a-box>
+		<a-marker type="barcode" value="3">
+			<a-box updateHeight position='0 5 0' height='1' width='1' material='color: green;'></a-box>
 		</a-marker>
 
 
 
 
-		<a-marker updateHeight type="barcode" value="4">
-			<a-box position='0 0.5 0' height='10' width='10' material='color: blue;'></a-box>
+		<a-marker type="barcode" value="4">
+			<a-box updateHeight position='0 0.5 0' height='10' width='10' material='color: blue;'></a-box>
 		</a-marker>
 
 
