--- a/camera.html
+++ b/camera.html
@@ -1,4 +1,4 @@
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 
 <script>
@@ -42,7 +42,7 @@
 
 
 		<a-marker type="barcode" value="2">
-			<a-box updateHeight position='0 3 0' height='2' width='2' material='color: red;'></a-box>
+			<a-box updateHeight position='0 3 0' height='2' width='2' depth ='2' material='color: red;'></a-box>
 		</a-marker>
 
 		
