--- a/camera.html
+++ b/camera.html
@@ -1,6 +1,6 @@
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
-
+<!--<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+-->
 <script>
 	AFRAME.registerComponent('updateHeight', {
 		tick: function () {
@@ -31,9 +31,10 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+<!--	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 		
-<!--<a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">-->
+<a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">-->
+	<a-scene>
 		<a-marker type="barcode" value="1">
 			<a-plane buildTerrain height="10" width="10" rotation="-90 0 0" material='color: white;'></a-plane>
 		</a-marker>
