--- a/camera.html
+++ b/camera.html
@@ -31,10 +31,9 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-<!--	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-		
+	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+	<!--	
 <a-marker type="pattern" preset="custom" url="https://leoncollins.github.io/qr-code.png">-->
-	<a-scene embedded arjs>
 		<a-marker type="barcode" value="1">
 			<a-plane buildTerrain height="10" width="10" rotation="-90 0 0" material='color: white;'></a-plane>
 		</a-marker>
