--- a/camera2.html
+++ b/camera2.html
@@ -3,7 +3,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 		<a-marker type="barcode" value="">
-			<a-image width=5 height=5 src="https://leoncollins.github.io/Bangor_Logo_A1.png"
+			<a-image width=5 height=5 src="https://leoncollins.github.io/Bangor_Logo_A1.png">
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
