--- a/camera2.html
+++ b/camera2.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-		<a-marker type="barcode" value="">
+		<a-marker type="barcode" value="1">
 			<a-image width=5 height=5 src="https://leoncollins.github.io/Bangor_Logo_A1.png">
 		</a-marker>
 		<a-entity camera></a-entity>
