--- a/camera2.html
+++ b/camera2.html
@@ -3,7 +3,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 		<a-marker type="barcode" value="1">
-			<a-image width=0.5 height=0.5 src="Bangor_Logo_A1.png"></a-image>
+			<a-image width=1 height=1 rotation="-90 0 0" src="Bangor_Logo_A1.png"></a-image>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
