--- a/cameraTest.html
+++ b/cameraTest.html
@@ -13,7 +13,8 @@
 	    el.setAttribute('rotation', rotationTmp);
 	  }
 	});
-
+</script>
+<script>
 	AFRAME.registerComponent('buildTerrain', {
 		init: function () {
 	    var el = this.el;
