--- a/cameraTest.html
+++ b/cameraTest.html
@@ -11,6 +11,7 @@
 	    rotationTmp.y = rotation.y + 0.4;
 	    rotationTmp.z = rotation.z + 0.4;
 	    el.setAttribute('rotation', rotationTmp);
+	    alert("Rotating");
 	  }
 	});
 </script>
@@ -25,6 +26,7 @@
             boxEl.setAttribute('position', {x: 2, y: 2, z: 2});
             boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
             el.appendChild(boxEl);
+            alert("Addind");
           }
 	  }
 	});
