--- a/cameraTest.html
+++ b/cameraTest.html
@@ -1,11 +1,12 @@
 <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<script> alert("scripts work");</script>
 
 <script>
 	AFRAME.registerComponent('updateHeight', {
 		tick: function () {
 	    var el = this.el;
-	   	var rotationTmp = this.rotationTmp = this.rotationTmp || {x: 0, y: 0, z: 0};
+	   	var rotationTmp = this.rotationTmp = this.rotationTmp || {0, 0, 0};
 	   	var rotation = el.getAttribute('rotation');
 	    rotationTmp.x = rotation.x + 0.4;
 	    rotationTmp.y = rotation.y + 0.4;
