--- a/cameraTest.html
+++ b/cameraTest.html
@@ -58,7 +58,7 @@
 		
 
 		<a-marker type="barcode" value="3">
-			<a-box updateHeight position='0 5 0' height='1' width='1' material='color: green;'></a-box>
+			<a-box ping position='0 5 0' height='1' width='1' material='color: green;'></a-box>
 		</a-marker>
 
 
