--- a/cameraTest.html
+++ b/cameraTest.html
@@ -3,7 +3,7 @@
 <script>
 	AFRAME.registerComponent('ping', {
 		init: function() {
-			alert("scripts work");
+			alert("functions work");
 		}
 	});
 </script>
@@ -34,7 +34,7 @@
             boxEl.setAttribute('position', {x: 2, y: 2, z: 2});
             boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
             el.appendChild(boxEl);
-            alert("Addind");
+            alert("Adding");
           }
 	  }
 	});
