--- a/cameraTest.html
+++ b/cameraTest.html
@@ -1,8 +1,9 @@
 <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
 <script>
 	AFRAME.registerComponent('ping', {
-		init: function() {
+		tick: function() {
 			alert("functions work");
 		}
 	});
