--- a/cameraTest.html
+++ b/cameraTest.html
@@ -5,7 +5,7 @@
 	AFRAME.registerComponent('ping', {
 
 		init: function() {
-			alert("tick test");
+			alert("unique");
 		}
 	});
 </script>
@@ -78,7 +78,7 @@
 
 
 		<a-marker type="barcode" value="4">
-			<a-box updateHeight position='0 0.5 0' height='10' width='10' material='color: blue;'></a-box>
+			<a-box position='0 0.5 0' height='10' width='10' material='color: blue;'></a-box>
 		</a-marker>
 
 
