--- a/cameraTest.html
+++ b/cameraTest.html
@@ -2,14 +2,14 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
 <script>
-	AFRAME.registerComponent('updateHeight', {
+	AFRAME.registerComponent('ping', {
 
 		init: function() {
-			alert("reverse");
+			alert("rename");
 		}
 	});
 
-	AFRAME.registerComponent('ping', {
+	AFRAME.registerComponent('move', {
 		tick: function() {
 
 			alert("is in");
@@ -73,7 +73,7 @@
 		
 
 		<a-marker type="barcode" value="3">
-			<a-box updateHeight position='0 5 0' height='1' width='1' material='color: green;'></a-box>
+			<a-box move position='0 5 0' height='1' width='1' material='color: green;'></a-box>
 		</a-marker>
 
 
