--- a/cameraTest.html
+++ b/cameraTest.html
@@ -66,13 +66,13 @@
 
 
 		<a-marker type="barcode" value="2">
-			<a-box ping position='0 0 3' height='2' width='2' depth ='2' material='color: red;'></a-box>
+			<a-box move position='0 0 3' height='2' width='2' depth ='2' material='color: red;'></a-box>
 		</a-marker>
 
 		
 
 		<a-marker type="barcode" value="3">
-			<a-box move position='0 5 0' height='1' width='1' material='color: green;'></a-box>
+			<a-box ping position='0 5 0' height='1' width='1' material='color: green;'></a-box>
 		</a-marker>
 
 
