--- a/cameraTest.html
+++ b/cameraTest.html
@@ -5,7 +5,7 @@
 	AFRAME.registerComponent('ping', {
 
 		init: function() {
-			alert("twoV2");
+			alert("three");
 		}
 	});
 
@@ -14,6 +14,7 @@
 
 		    var el = this.el;
 		    var rotation = el.getAttribute('rotation');
+		    this.el.object3D.rotation.x = rotation.x + 1;
 		}
 	});
 </script>
