--- a/cameraTest.html
+++ b/cameraTest.html
@@ -5,28 +5,26 @@
 	AFRAME.registerComponent('ping', {
 
 		init: function() {
-			alert("map");
+			alert("mapV2");
 		}
 	});
 
 	AFRAME.registerComponent('move', {
 		init: function () {
-    // Set up the tick throttling.
-    this.tick = AFRAME.utils.throttleTick(this.tick, 500, this);
-  },
+    		// Set up the tick throttling.
+    		this.tick = AFRAME.utils.throttleTick(this.tick, 500, this);
+  		},
 
-  /**
-   * Tick function that will be wrapped to be throttled.
-   */
-  tick: function (t, dt) {
-  	var el = this.el;
+  		/**
+   		* Tick function that will be wrapped to be throttled.
+   		*/
+  		tick: function (t, dt) {
+  			var el = this.el;
 		    var rotation = el.getAttribute('rotation');
 		    this.el.object3D.rotation.x = rotation.x + 1;
 		}
 	});
-</script>
 
-<script>
 	AFRAME.registerComponent('map', {
 		init: function() {
 			alert("in plane");
