--- a/cameraTest.html
+++ b/cameraTest.html
@@ -27,7 +27,8 @@
 
 	AFRAME.registerComponent('terr', {
 		init: function() {
-			alert("works");
+			var el = this.el;
+			alert("works 2");
 		}
 	});
 </script>
