--- a/cameraTest.html
+++ b/cameraTest.html
@@ -28,7 +28,15 @@
 	AFRAME.registerComponent('terr', {
 		init: function() {
 			var el = this.el;
-			alert("works 2");
+			for (var i = 0; i < 1; i++) {
+				var boxEl = document.createElement('a-entity');
+				boxEl.setAttribute('geometry', {primitive: 'box'});
+				boxEl.setAttribute('material', {color: 'black'});
+	            boxEl.setAttribute('position', {x: 2, y: 2, z: 2});
+	            boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
+	            el.appendChild(boxEl);
+			}
+			alert("works 5");
 		}
 	});
 </script>
