--- a/dmPage.html
+++ b/dmPage.html
@@ -5,16 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<div id="board">
-		<input type="number" id="1 1">
-		<input type="number" id="1 2">
-		<input type="number" id="1 3">
-		<input type="number" id="2 1">
-		<input type="number" id="2 2">
-		<input type="number" id="2 3">
-		<input type="number" id="3 1">
-		<input type="number" id="3 2">
-		<input type="number" id="3 3">
-	</div>
+	<form action="/cameraTest.html">
+		<div id="board">
+			<input type="number" id="1 1">
+			<input type="number" id="1 2">
+			<input type="number" id="1 3">
+			<input type="number" id="2 1">
+			<input type="number" id="2 2">
+			<input type="number" id="2 3">
+			<input type="number" id="3 1">
+			<input type="number" id="3 2">
+			<input type="number" id="3 3">
+		</div>
+		<button>Submit</button>
+	</form>
 </body>
 </html>
