--- a/dmPage.html
+++ b/dmPage.html
@@ -7,7 +7,7 @@
 <body>
 	<form action="/cameraTest.html">
 		<div id="board">
-			<input type="number" id="1 1">
+			<input type="number" name="1 1">
 			<input type="number" id="1 2">
 			<input type="number" id="1 3">
 			<input type="number" id="2 1">
