--- a/dmPage.html
+++ b/dmPage.html
@@ -17,7 +17,7 @@
 			<input type="number" id="3 2">
 			<input type="number" id="3 3">
 		</div>
-		<input type="number" id="4 1">
+		<input type="number" name="4 1">
 		<button>Submit</button>
 	</form>
 </body>
