--- a/dmPage.html
+++ b/dmPage.html
@@ -7,17 +7,16 @@
 <body>
 	<form action="/cameraTest.html">
 		<div id="board">
-			<input type="number" name="1 1">
-			<input type="number" id="1 2">
-			<input type="number" id="1 3">
-			<input type="number" id="2 1">
-			<input type="number" id="2 2">
-			<input type="number" id="2 3">
-			<input type="number" id="3 1">
-			<input type="number" id="3 2">
-			<input type="number" id="3 3">
+			<input type="number" name="one">
+			<input type="number" name="two">
+			<input type="number" name="three">
+			<input type="number" name="four">
+			<input type="number" name="five">
+			<input type="number" name="six">
+			<input type="number" name="seven">
+			<input type="number" name="eight">
+			<input type="number" name="nine">
 		</div>
-		<input type="number" name="4 1">
 		<button>Submit</button>
 	</form>
 </body>
