--- a/dmPage.html
+++ b/dmPage.html
@@ -7,15 +7,15 @@
 <body>
 	<form action="/cameraTest.html">
 		<div id="board">
-			<input type="number" name="one">
-			<input type="number" name="two">
-			<input type="number" name="three">
-			<input type="number" name="four">
-			<input type="number" name="five">
-			<input type="number" name="six">
-			<input type="number" name="seven">
-			<input type="number" name="eight">
-			<input type="number" name="nine">
+			<input type="number" min="1" max="5" name="one">
+			<input type="number" min="1" max="5" name="two">
+			<input type="number" min="1" max="5" name="three">
+			<input type="number" min="1" max="5" name="four">
+			<input type="number" min="1" max="5" name="five">
+			<input type="number" min="1" max="5" name="six">
+			<input type="number" min="1" max="5" name="seven">
+			<input type="number" min="1" max="5" name="eight">
+			<input type="number" min="1" max="5" name="nine">
 		</div>
 		<button>Submit</button>
 	</form>
