--- a/cameraTest.html
+++ b/cameraTest.html
@@ -4,12 +4,51 @@
 <script>
 	var url_string = window.location.href;
 	var url = new URL(url_string);
-	var c = url.searchParams.get("c");
+	var c = url.searchParams.get("");
+
+	AFRAME.registerComponent('terr', {
+		init: function() {
+			var el = this.el;
+			for (var i = 0; i < 3; i++) {
+				for (var j = 0; j < 3; j++) {
+					var boxEl = document.createElement('a-entity');
+					boxEl.setAttribute('geometry', {primitive: 'box'});
+					boxEl.setAttribute('material', {color: 'black'});
+		            boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
+		            boxEl.setAttribute('position', {x: i, y: j, z: -1});
+		            el.appendChild(boxEl);
+	        	}
+			}
+		}
+	});
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-		
+
+		<a-marker terr type="barcode" value="1">
+			
+		</a-marker>
+
+		<a-marker type="barcode" value="2">
+			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: red;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="3">
+			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: blue;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="4">
+			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: green;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="5">
+			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: yellow;'></a-box>
+		</a-marker>
+
+		<a-marker type="barcode" value="6">
+			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: brown;'></a-box>
+		</a-marker>
 
 		<a-entity camera></a-entity>
 	</a-scene>
