--- a/cameraTest.html
+++ b/cameraTest.html
@@ -15,7 +15,7 @@
 					boxEl.setAttribute('geometry', {primitive: 'box'});
 					boxEl.setAttribute('material', {color: 'black'});
 		            boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
-		            boxEl.setAttribute('position', {x: i, y: j, z: -1});
+		            boxEl.setAttribute('position', {x: i, y: -1, z: j});
 		            el.appendChild(boxEl);
 	        	}
 			}
@@ -31,23 +31,23 @@
 		</a-marker>
 
 		<a-marker type="barcode" value="2">
-			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: red;'></a-box>
+			<a-box position='0 2 0' height='2' width='2' depth ='2' material='color: red;'></a-box>
 		</a-marker>
 
 		<a-marker type="barcode" value="3">
-			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: blue;'></a-box>
+			<a-box position='0 2 0' height='2' width='2' depth ='2' material='color: blue;'></a-box>
 		</a-marker>
 
 		<a-marker type="barcode" value="4">
-			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: green;'></a-box>
+			<a-box position='0 2 0' height='2' width='2' depth ='2' material='color: green;'></a-box>
 		</a-marker>
 
 		<a-marker type="barcode" value="5">
-			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: yellow;'></a-box>
+			<a-box position='0 2 0' height='2' width='2' depth ='2' material='color: yellow;'></a-box>
 		</a-marker>
 
 		<a-marker type="barcode" value="6">
-			<a-box position='0 0 2' height='2' width='2' depth ='2' material='color: brown;'></a-box>
+			<a-box position='0 2 0' height='2' width='2' depth ='2' material='color: brown;'></a-box>
 		</a-marker>
 
 		<a-entity camera></a-entity>
