--- a/cameraTest.html
+++ b/cameraTest.html
@@ -1,5 +1,6 @@
 <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<script src="main.js"></script>
 
 <script>
 	var url_string = window.location.href;
@@ -28,6 +29,12 @@
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
+	<button>Settings</button>
+	<div id="overlay">
+		<input type="number" id="height" value="1">
+		<button onclick="setHeight()">Set Height</button>
+	</div>
+
 	<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
 		<a-marker terr type="barcode" value="1">
@@ -35,7 +42,7 @@
 		</a-marker>
 
 		<a-marker type="barcode" value="2">
-			<a-box position='0 0 0' height='1' width='1' depth ='1' material='color: red;'></a-box>
+			<a-box id="POne" position='0 0 0' height='1' width='1' depth ='1' material='color: red;'></a-box>
 		</a-marker>
 
 		<a-marker type="barcode" value="3">
