--- a/dmPage.html
+++ b/dmPage.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>DM Settings</title>
+	<title>Setup Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 	<form action="/cameraTest.html">
 		<div id="board">
-			<input type="number" min="1" max="3" name="one">
-			<input type="number" min="1" max="3" name="two">
-			<input type="number" min="1" max="3" name="three">
-			<input type="number" min="1" max="3" name="four">
-			<input type="number" min="1" max="3" name="five">
-			<input type="number" min="1" max="3" name="six">
-			<input type="number" min="1" max="3" name="seven">
-			<input type="number" min="1" max="3" name="eight">
-			<input type="number" min="1" max="3" name="nine">
+			<input class="boxes" type="number" min="1" max="3" name="one">
+			<input class="boxes" type="number" min="1" max="3" name="two">
+			<input class="boxes" type="number" min="1" max="3" name="three">
+			<input class="boxes" type="number" min="1" max="3" name="four">
+			<input class="boxes" type="number" min="1" max="3" name="five">
+			<input class="boxes" type="number" min="1" max="3" name="six">
+			<input class="boxes" type="number" min="1" max="3" name="seven">
+			<input class="boxes" type="number" min="1" max="3" name="eight">
+			<input class="boxes" type="number" min="1" max="3" name="nine">
 		</div>
 		<button>Submit</button>
 	</form>
