--- a/cameraTest.html
+++ b/cameraTest.html
@@ -29,7 +29,7 @@
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<button onclick="openOverlay()">Settings</button>
+	<button id="menu" onclick="openOverlay()">Settings</button>
 	<div id="overlay">
 		<input type="number" id="height" value="1">
 		<button onclick="setHeight()">Set Height</button>
