--- a/cameraTest.html
+++ b/cameraTest.html
@@ -1,3 +1,7 @@
+<head>
+	<title>Camera</title>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+</head>
 <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <script src="main.js"></script>
@@ -29,7 +33,7 @@
 </script>
 
 <body style='margin : 0px; overflow: hidden;'>
-	<button id="menu" onclick="openOverlay()">Settings2</button>
+	<button id="menu" onclick="openOverlay()">Settings</button>
 	<div id="overlay">
 		<input type="number" id="height" value="1">
 		<button onclick="setHeight()">Set Height</button>
