--- a/cameraTest.html
+++ b/cameraTest.html
@@ -37,7 +37,7 @@
 		<button id="menu" onclick="openOverlay()">Settings</button>
 	</div>
 	<div id="overlay">
-		<input type="number" id="height" value="1">
+		<input type="number" id="height">
 		<button onclick="setHeight()">Set Height</button>
 		<button onclick="closeOverlay()">Return</button>
 	</div>
