--- a/cameraTest.html
+++ b/cameraTest.html
@@ -34,7 +34,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
 	<div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-		<button id="menu" onclick="openOverlay()">Settings</button>
+		<button id="menu" onclick="openOverlay()">Settings2</button>
 	</div>
 	<div id="overlay">
 		<input type="number" id="height">
