--- a/cameraTest.html
+++ b/cameraTest.html
@@ -36,8 +36,8 @@
 	<div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
 		<button id="menu" onclick="openOverlay()">Settings</button>
 	</div>
-	<div class="overlay">
-		<div class="contents">
+	<div id="overlay">
+		<div id="contents">
 			<input type="number" id="height">
 			<button onclick="setHeight()">Set Height</button>
 			<br> 
