--- a/cameraTest.html
+++ b/cameraTest.html
@@ -51,7 +51,7 @@
 			<select id="shape" name="shape">
 				<option value="cube">Cube</option>
 				<option value="sphere">Sphere</option>
-				<option value="pyramid">Pyramid</option>
+				<option value="cylinder">Cylinder</option>
 			</select>
 			<button onclick="setShape()">Set Shape</button>
 			<br>
